--- a/Heimdall/app/src/main/res/layout/activity_registration.xml
+++ b/Heimdall/app/src/main/res/layout/activity_registration.xml
@@ -54,7 +54,7 @@
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:text="c@c.com"
+        android:text="a@a.com"
         android:textColorHighlight="#727272"
         android:textColorLink="#727272"
         android:textCursorDrawable="@android:color/darker_gray"
