--- a/Heimdall/app/src/main/res/layout/activity_add_card.xml
+++ b/Heimdall/app/src/main/res/layout/activity_add_card.xml
@@ -59,7 +59,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:onClick="addStockCard"
+        android:alpha=".2"
+        android:clickable="false"
         android:text="@string/add2Watch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
