--- a/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
+++ b/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="toHome"
+                android:onClick="backScreen"
                 android:text="Back to Home" />
 
             <TextView
